Add initial version of secureserver-config script for api_key setup

--- a/etc/agent.config
+++ b/etc/agent.config
@@ -8,3 +8,6 @@ service_endpoint="http://146.185.148.96:4567/api/post"
 
 # frequency in seconds which tells the agent how often to report back to the service
 report_frequency=60
+
+# your api key
+api_key=
