Check previous request and set connection timeout to curl

--- a/etc/agent.config
+++ b/etc/agent.config
@@ -1,13 +1,20 @@
-## this is the main secureserver config file
-## properties should be set in the same manner as bash variables
-## example:
+## This is the main secureserver config file
+## Properties should be set in the same manner as bash variables
+## Example:
 ## property=value
 
-# this is the secureserver api endpoint
+# This is the secureserver api endpoint
 service_endpoint="http://146.185.148.96:4567/api/post"
 
-# frequency in seconds which tells the agent how often to report back to the service
+# Frequency in seconds which tells the agent how often to report back to the service
 report_frequency=60
 
-# your api key
+# Your api key
 api_key=
+
+# Connection timeout in seconds
+connect_timeout=10
+
+# Max connection time in seconds
+max_time=10
+
