Check if api key is added before starting agent

--- a/etc/agent.config
+++ b/etc/agent.config
@@ -10,7 +10,7 @@ service_endpoint="http://146.185.148.96:4567/api/post"
 report_frequency=60
 
 # Your api key
-api_key=
+api_key=REPLACE_WITH_YOUR_KEY
 
 # Connection timeout in seconds
 connect_timeout=10
