--- a/etc/agent.config
+++ b/etc/agent.config
@@ -18,5 +18,5 @@ connect_timeout=10
 # Max connection time in seconds
 max_time=10
 
-# Loglevel (INFO or DEBUG)
-loglevel=INFO
+# Debug (true/false)
+debug=false
